# unfold_demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
DjangoProject/: settings.py
nginx/: nginx.conf
places/: admin.py  models.py
places/migrations/: 0001_initial.py
